[gd_scene load_steps=10 format=3 uid="uid://b2fvaiyt51vwy"]

[ext_resource type="Script" uid="uid://vmqqn7h3v6pm" path="res://tools/gun/gun.gd" id="1_4xv74"]
[ext_resource type="PackedScene" uid="uid://b6rtjfqeg1nle" path="res://Models/Guns/Gun_Pistol.gltf" id="1_em836"]
[ext_resource type="Script" uid="uid://v3yqd3ncn1q4" path="res://tools/gun/pick_up.gd" id="3_8snnj"]
[ext_resource type="PackedScene" uid="uid://d1tnob0lwyn1w" path="res://Models/Guns/Bullet.gltf" id="4_8snnj"]
[ext_resource type="AudioStream" uid="uid://xpxctvkupkor" path="res://Music/shoot.wav" id="5_o4une"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_o4une"]
radius = 0.344108
height = 1.19667

[sub_resource type="Animation" id="Animation_beb8j"]
length = 0.001
tracks/0/type = "rotation_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Gun_Pistol2/Gun_Pistol")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_o4une"]
resource_name = "up_down"
length = 4.0
loop_mode = 1
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Gun_Pistol2")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0.0333333, 1, 0, 0, 0, 2.03333, 1, 0, 0.273, 0.43)
tracks/1/type = "scale_3d"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Gun_Pistol2")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0.0333333, 1, 1, 1, 1, 2.1, 1, 0.827105, 0.827105, 0.827105)
tracks/2/type = "rotation_3d"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Gun_Pistol2/Gun_Pistol")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = PackedFloat32Array(0.0666667, 1, 0, 0, 0, 1, 1.93333, 1, 0, 1, 0, -4.37114e-08, 3.1, 1, 0, 0.713105, 0, 0.701057)

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mac8t"]
_data = {
&"RESET": SubResource("Animation_beb8j"),
&"up_down": SubResource("Animation_o4une")
}

[node name="Gun" type="Node3D" node_paths=PackedStringArray("shootSound")]
script = ExtResource("1_4xv74")
shootSound = NodePath("ShootSound")

[node name="PickUp" type="Area3D" parent="." groups=["gun", "tool"]]
script = ExtResource("3_8snnj")

[node name="CollisionShape3D" type="CollisionShape3D" parent="PickUp"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.0148004, 0.255305)
shape = SubResource("CapsuleShape3D_o4une")

[node name="Marker3D" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.126651, 0.691271)

[node name="Gun_Pistol2" parent="." instance=ExtResource("1_em836")]
transform = Transform3D(0.997019, 0, 0, 0, 0.997019, 0, 0, 0, 0.997019, 0, 0.00455001, 0.00716665)

[node name="Node3D" type="Node3D" parent="Gun_Pistol2/Gun_Pistol/Gun_Pistol_Magazine" index="0"]
transform = Transform3D(1.29618, 0, -0.0995528, 0, 1.3, 0, 0.0995528, 0, 1.29618, 0.00100822, 0.0644364, -0.317668)

[node name="Bullet2" parent="Gun_Pistol2/Gun_Pistol/Gun_Pistol_Magazine/Node3D" instance=ExtResource("4_8snnj")]
transform = Transform3D(0.6, 0, 0, 0, -0.00298449, 0.599993, 0, -0.599993, -0.00298449, 0.136322, 0.160459, 0.494039)
visible = false

[node name="Bullet3" parent="Gun_Pistol2/Gun_Pistol/Gun_Pistol_Magazine/Node3D" instance=ExtResource("4_8snnj")]
transform = Transform3D(0.6, 0, 0, 0, -0.00298449, 0.599993, 0, -0.599993, -0.00298449, 0.136322, 0.160459, 0.436076)
visible = false

[node name="Bullet4" parent="Gun_Pistol2/Gun_Pistol/Gun_Pistol_Magazine/Node3D" instance=ExtResource("4_8snnj")]
transform = Transform3D(0.6, 0, 0, 0, -0.00298449, 0.599993, 0, -0.599993, -0.00298449, 0.136322, 0.160459, 0.383131)
visible = false

[node name="Bullet5" parent="Gun_Pistol2/Gun_Pistol/Gun_Pistol_Magazine/Node3D" instance=ExtResource("4_8snnj")]
transform = Transform3D(0.6, 0, 0, 0, -0.00298449, 0.599993, 0, -0.599993, -0.00298449, 0.136322, 0.160459, 0.332736)
visible = false

[node name="Bullet6" parent="Gun_Pistol2/Gun_Pistol/Gun_Pistol_Magazine/Node3D" instance=ExtResource("4_8snnj")]
transform = Transform3D(0.6, 0, 0, 0, -0.00298449, 0.599993, 0, -0.599993, -0.00298449, 0.136322, 0.160459, 0.279761)
visible = false

[node name="Bullet7" parent="Gun_Pistol2/Gun_Pistol/Gun_Pistol_Magazine/Node3D" instance=ExtResource("4_8snnj")]
transform = Transform3D(0.6, 0, 0, 0, -0.00298449, 0.599993, 0, -0.599993, -0.00298449, 0.136322, 0.160459, 0.218454)
visible = false

[node name="ShootSound" type="AudioStreamPlayer3D" parent="."]
visible = false
stream = ExtResource("5_o4une")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_mac8t")
}

[editable path="Gun_Pistol2"]
